update re tute examples

--- a/generics/regexp_related/re_tute.ipynb
+++ b/generics/regexp_related/re_tute.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "\"<Match: 'Isaac Newton', groups=('Isaac', 'Newton')>\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,80 @@
    "metadata": {},
    "source": [
     "# features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### compile for pattern object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 're.Pattern'>\n",
+      "<re.Match object; span=(8, 13), match='akt5q'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(r\"([a2-9tjqk]{5})\")\n",
+    "print(type(pattern))\n",
+    "print(pattern.search(\"inputs: akt5q, 33333\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(8, 13), match='akt5q'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# or use the re funcs directly\n",
+    "print(re.search(r\"([a2-9tjqk]{5})\", \"inputs: akt5q, 33333\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "findall\n",
+      "finditer\n",
+      "flags\n",
+      "fullmatch\n",
+      "groupindex\n",
+      "groups\n",
+      "match\n",
+      "pattern\n",
+      "scanner\n",
+      "search\n",
+      "split\n",
+      "sub\n",
+      "subn\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_external_methods(pattern)"
    ]
   },
   {
@@ -159,107 +233,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compile for pattern object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "re.Pattern"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "valid = re.compile(r\"^[a2-9tjqk]{5}$\")\n",
-    "type(valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "findall\n",
-      "finditer\n",
-      "flags\n",
-      "fullmatch\n",
-      "groupindex\n",
-      "groups\n",
-      "match\n",
-      "pattern\n",
-      "scanner\n",
-      "search\n",
-      "split\n",
-      "sub\n",
-      "subn\n"
-     ]
-    }
-   ],
-   "source": [
-    "display_external_methods(valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['akt5q']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(valid.findall(\"akt5q\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "three_digi = re.compile(r'\\d{3}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['001', '123', '456']\n"
+      "<re.Match object; span=(12, 29), match='\"/home/user/data\"'>\n",
+      "\"/home/user/data\"\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "print(three_digi.findall(\"aaa78_mem001-1234567\"))"
+    "pat = re.compile(r'\"/home.*\"')\n",
+    "match = pat.search(\"\"\"libname yes \"/home/user/data\" readonly;\"\"\")\n",
+    "print(match)\n",
+    "print(match.group())\n",
+    "print(pat.search(\"\"\"a_sdtrig = \"aserf\" #345\"\"\"))"
    ]
   },
   {
@@ -316,11 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# returns None if no match\n",
+    "valid = re.compile(r\"(\\w+)-(\\d+)\")\n",
     "valid.match(\"akt5q11\")"
    ]
   },
@@ -363,102 +361,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('abc', '123')"
+       "<re.Match object; span=(0, 7), match='abc-123'>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "match.groups()"
+    "word_number = re.compile(r\"(\\w+)-(\\d+)\")\n",
+    "match = word_number.match(\"abc-123\")\n",
+    "match"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'abc-123'"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('abc', '123')\n",
+      "abc-123\n",
+      "('abc-123', 'abc', '123')\n"
+     ]
     }
    ],
    "source": [
-    "match.group()"
+    "print(match.groups()) # tuple of all subgroups\n",
+    "print(match.group()) # entire match\n",
+    "print(match.group(0,1,2)) # subgroups of the match"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'abc-123'"
+       "<re.Match object; span=(4, 7), match='123'>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "match.group(0)"
+    "numbers = re.compile(r\"(\\d+)\")\n",
+    "match = numbers.search(\"abc-123_v2\")\n",
+    "match"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'abc'"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('123',)\n",
+      "123\n"
+     ]
     }
    ],
    "source": [
-    "match.group(1)"
+    "# use group to get entire match as str\n",
+    "print(match.groups())\n",
+    "print(match.group())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'123'"
+       "<re.Match object; span=(4, 7), match='123'>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "match.group(2)"
+    "numbers = re.compile(r\"\\d+\")\n",
+    "match = numbers.search(\"abc-123_v2\")\n",
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "# groups can be empty tuple\n",
+    "print(match.groups()) \n",
+    "print(match.group()) "
    ]
   },
   {
@@ -470,82 +495,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# detect pair via backreference\n",
     "pair = re.compile(r\".*(.).*\\1\")\n",
     "# 0 or more of any, then potential first occurrence,\n",
-    "# then 0 or more of any, then the 2nd occurrence\n",
-    "# making a pair\n",
-    "displaymatch(pair.match(\"717ak\"))  # Pair of 7s.\n",
-    "displaymatch(pair.match(\"718ak\"))  # No pairs.\n",
-    "displaymatch(pair.match(\"354aa\"))  # Pair of aces.\n",
-    "displaymatch(pair.match(\"aa778\"))  # greedy\n",
-    "displaymatch(re.compile(r\".*?(.).*?\\1\").match(\"aa778\"))  # non-greedy\n"
+    "# then 0 or more of any, then the 2nd occurrence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "pair.match(\"717ak\").group()  # the whole match\n",
-    "pair.match(\"717ak\").group(1)  # the first group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "target: libname yes \"/home/user/data;\" readonly;\n",
-      "['\"/home/user/data;\"']\n",
-      "\"/home/user/data;\"\n",
-      "\n",
-      "\n",
-      "target: libname no \"/user/data;\" readonly;\n",
-      "[]\n",
-      "\n",
-      "\n",
-      "target: a_sdtrig = \"aserf\" #345\n",
-      "[]\n",
-      "\n",
-      "\n"
+      "None\n",
+      "<re.Match object; span=(0, 4), match='0a2a'>\n"
      ]
     }
    ],
    "source": [
-    "# find the paths starting from a location in a line\n",
-    "targets = [\n",
-    "    \"\"\"libname yes \"/home/user/data;\" readonly;\"\"\",\n",
-    "    \"\"\"libname no \"/user/data;\" readonly;\"\"\",\n",
-    "    \"\"\"a_sdtrig = \"aserf\" #345\"\"\",\n",
-    "]\n",
-    "\n",
-    "#.*? is a non-greedy match for any character (.) repeated 0 or more times (*). \n",
-    "# The ? makes it non-greedy, meaning it will match as few characters as possible \n",
-    "# while still satisfying the rest of the pattern.\n",
-    "\n",
-    "for target in targets:\n",
-    "    print(f\"target: {target}\")\n",
-    "\n",
-    "    print(re.findall(r'\"/home.*?\"', target))\n",
-    "\n",
-    "    potential = re.search(r'\"/home.*?\"', target)\n",
-    "    if potential:\n",
-    "        print(potential.group())\n",
-    "\n",
-    "    print(\"\\n\")\n",
-    "    \n",
-    "\n"
+    "print(pair.match(\"01234\"))\n",
+    "print(pair.match(\"0a2a4\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a',)\n",
+      "0a2a\n"
+     ]
+    }
+   ],
+   "source": [
+    "match = pair.match(\"0a2a4\")\n",
+    "print(match.groups())\n",
+    "print(match.group())"
    ]
   },
   {
