--- a/data/pandas_tute/compare/compare_df.ipynb
+++ b/data/pandas_tute/compare/compare_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,79 +26,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_list(l1, l2):\n",
+    "\n",
+    "    if (l1 == l2).all():\n",
+    "        print(\"lists are the same\")\n",
+    "    else:\n",
+    "        s1 = set(l1)\n",
+    "        s2 = set(l2)\n",
+    "\n",
+    "        if s1 == s2:\n",
+    "            print(\"lists are the same, but order is different\")\n",
+    "            return\n",
+    "        else:\n",
+    "            print(\"lists are different\")\n",
+    "            print(f\"there are {len(s1 - s2)} elements in the first list that are not in the second list, they are:\")\n",
+    "            print(s1 - s2)\n",
+    "            print(f\"there are {len(s2 - s1)} elements in the second list that are not in the first list, they are:\")\n",
+    "            print(s2 - s1)\n",
+    "            print(f\"there are {len(s1 & s2)} elements that are in both lists, they are:\")\n",
+    "            print(s1 & s2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFrames have different indexes\n",
-      "Number of indexes in left DataFrame but not in right DataFrame: 1\n",
-      "Number of indexes in right DataFrame but not in left DataFrame: 1\n",
-      "Number of indexes in both DataFrames: 2\n"
+      "lists are different\n",
+      "there are 1 elements in the first list that are not in the second list, they are:\n",
+      "{2}\n",
+      "there are 1 elements in the second list that are not in the first list, they are:\n",
+      "{3}\n",
+      "there are 2 elements that are in both lists, they are:\n",
+      "{0, 1}\n"
      ]
     }
    ],
    "source": [
-    "s1 = set(df1.index)\n",
-    "s2 = set(df2.index)\n",
-    "\n",
-    "if s1 == s2:\n",
-    "    print(\"Both DataFrames have the same indexes\")\n",
-    "    if df1.index.equals(df2.index):\n",
-    "        print(\"Both DataFrames have the same indexes and in the same order\")\n",
-    "    else:\n",
-    "        print(\"Both DataFrames have the same indexes but in different order\")\n",
-    "else:\n",
-    "    n_in_left_not_in_right = len(s1 - s2)\n",
-    "    n_in_right_not_in_left = len(s2 - s1)\n",
-    "    n_in_both = len(s1 & s2)\n",
-    "    print(\"DataFrames have different indexes\")\n",
-    "    print(f\"Number of indexes in left DataFrame but not in right DataFrame: {n_in_left_not_in_right}\")\n",
-    "    print(f\"Number of indexes in right DataFrame but not in left DataFrame: {n_in_right_not_in_left}\")\n",
-    "    print(f\"Number of indexes in both DataFrames: {n_in_both}\")"
+    "compare_list(df1.index, df2.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFrames have different columns\n",
-      "Number of columns in left DataFrame but not in right DataFrame: 1\n",
-      "Number of columns in right DataFrame but not in left DataFrame: 1\n",
-      "Number of columns in both DataFrames: 2\n"
+      "lists are different\n",
+      "there are 1 elements in the first list that are not in the second list, they are:\n",
+      "{'B'}\n",
+      "there are 1 elements in the second list that are not in the first list, they are:\n",
+      "{'C'}\n",
+      "there are 2 elements that are in both lists, they are:\n",
+      "{'D', 'A'}\n"
      ]
     }
    ],
    "source": [
-    "s1 = set(df1.columns)\n",
-    "s2 = set(df2.columns)\n",
-    "\n",
-    "if s1 == s2:\n",
-    "    print(\"Both DataFrames have the same columns\")\n",
-    "    if df1.columns.equals(df2.columns):\n",
-    "        print(\"Both DataFrames have the same columns and in the same order\")\n",
-    "    else:\n",
-    "        print(\"Both DataFrames have the same columns but in different order\")\n",
-    "else:\n",
-    "    n_in_left_not_in_right = len(s1 - s2)\n",
-    "    n_in_right_not_in_left = len(s2 - s1)\n",
-    "    n_in_both = len(s1 & s2)\n",
-    "    print(\"DataFrames have different columns\")\n",
-    "    print(f\"Number of columns in left DataFrame but not in right DataFrame: {n_in_left_not_in_right}\")\n",
-    "    print(f\"Number of columns in right DataFrame but not in left DataFrame: {n_in_right_not_in_left}\")\n",
-    "    print(f\"Number of columns in both DataFrames: {n_in_both}\")"
+    "compare_list(df1.columns, df2.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
        "1  b  2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
        "1  b  2.0000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
        "1    b     b    2  2.0000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
        "0    a     z  1.0  1.0001"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
